# mjlab_playground

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mjlab_playground/: __init__.py
src/mjlab_playground/asset_zoo/robots/booster_t1/: t1_constants.py
src/mjlab_playground/asset_zoo/robots/booster_t1/xmls/: t1.xml
src/mjlab_playground/getup/: getup_env_cfg.py
src/mjlab_playground/getup/config/g1/: __init__.py  env_cfgs.py  print_home_heights.py  rl_cfg.py
src/mjlab_playground/getup/config/go1/: env_cfgs.py
src/mjlab_playground/getup/config/t1/: env_cfgs.py  rl_cfg.py
src/mjlab_playground/getup/mdp/: __init__.py  actions.py  events.py  observations.py  rewards.py
src/mjlab_playground/getup/rl/: __init__.py  runner.py
tests/: test_getup.py
