[project]
name = "mjlab-playground"
version = "0.1.0"
description = "Extra tasks for mjlab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mjlab[cu128]",
    "torch>=2.7.0,<2.10.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab", rev = "e2a405a8ddf8176a2873834b63fcf3e5c388aa80" }
warp-lang = { index = "nvidia", marker = "sys_platform != 'darwin'" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
mujoco = { index = "mujoco" }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "875c4caf06d71b12b2036c327e7a07ce08a78b9a" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

# The nightly index (py.mujoco.org) only has dev builds.
[tool.uv]
override-dependencies = ["mujoco>=3.6.0.dev0"]

[tool.ruff]
indent-width = 2
src = ["src/mjlab_playground"]
exclude = ["typings"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.pyright]
pythonVersion = "3.13"
ignore = ["./typings"]
stubPath = "typings"
reportWildcardImportFromLibrary = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[project.entry-points."mjlab.tasks"]
mjlab_playground = "mjlab_playground"
